_archiv/simple-app/simple-app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: "simple-app-service"
spec:
  selector:
    app: "simple-app"
  ports:
    - port: 8080
