_archiv/simple-app/simple-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/simple-app"
        backend:
          service:
            name: simple-app-service
            port:
              number: 8080
